[gd_scene load_steps=12 format=3 uid="uid://co46a81bhjy0h"]

[ext_resource type="Script" uid="uid://byw8y0boc22kv" path="res://scenes/ui/perk_card.gd" id="1_hotfk"]
[ext_resource type="Texture2D" uid="uid://wcekbw4exanq" path="res://assets/image/ui/perk-card/perk-card-passive-bg.png" id="1_lnouj"]
[ext_resource type="Texture2D" uid="uid://bb4fwwxksa08k" path="res://assets/image/ui/perk-card/perk-card-sword.png" id="2_w0vy3"]
[ext_resource type="LabelSettings" uid="uid://dkmcj5lrnscfr" path="res://resources/ui/perk_card_label_settings.tres" id="3_s17lv"]
[ext_resource type="Texture2D" uid="uid://dt7qj64vavey7" path="res://assets/image/ui/perk-card/perk-card-loop.png" id="4_hsj81"]
[ext_resource type="Texture2D" uid="uid://btxr71nt26pt6" path="res://assets/image/ui/perk-card/perk-card-stopwatch.png" id="5_c8h7q"]
[ext_resource type="Texture2D" uid="uid://d0nr64eaumjig" path="res://assets/image/ui/perk-card/perk-card-trigger-crystal.png" id="6_68b68"]
[ext_resource type="LabelSettings" uid="uid://dyopxw246dm80" path="res://resources/ui/perk_card_text_label_settings.tres" id="6_c8h7q"]
[ext_resource type="Script" uid="uid://dcr8nsrxaci3q" path="res://scenes/ui/rarity_type_descriptor.gd" id="8_hotfk"]
[ext_resource type="Script" uid="uid://c57pnrjottpps" path="res://scripts/ui/description_box.gd" id="9_2rl1r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m4o3a"]
bg_color = Color(0.12156863, 0.12156863, 0.12156863, 0)
border_width_top = 3
border_color = Color(0.18359056, 0.18359041, 0.18359044, 1)

[node name="PerkCard" type="Control"]
custom_minimum_size = Vector2(73, 104)
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -540.0
offset_right = 73.0
offset_bottom = -436.0
grow_vertical = 2
pivot_offset = Vector2(0, 52)
script = ExtResource("1_hotfk")

[node name="DisappearArea" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = -37.0
offset_right = 70.299995
offset_bottom = 101.56
mouse_filter = 1
color = Color(1, 1, 1, 0)

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -48.0
offset_right = 32.5
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_lnouj")

[node name="PowerIcon" type="TextureRect" parent="Background"]
layout_mode = 0
offset_left = -5.0
offset_top = 85.0
offset_right = 11.0
offset_bottom = 101.0
texture = ExtResource("2_w0vy3")

[node name="PowerLabel" type="Label" parent="Background/PowerIcon"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -10.0
offset_top = -3.0
offset_right = 30.0
offset_bottom = 10.0
text = "1"
label_settings = ExtResource("3_s17lv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoopIcon" type="TextureRect" parent="Background"]
layout_mode = 0
offset_left = 53.0
offset_top = 82.0
offset_right = 69.0
offset_bottom = 98.0
texture = ExtResource("4_hsj81")

[node name="LoopLabel" type="Label" parent="Background/LoopIcon"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -12.0
offset_right = 28.0
offset_bottom = 13.0
text = "0.75s"
label_settings = ExtResource("3_s17lv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CooldownIcon" type="TextureRect" parent="Background"]
layout_mode = 0
offset_left = 54.0
offset_top = 60.0
offset_right = 70.0
offset_bottom = 76.0
texture = ExtResource("5_c8h7q")

[node name="CooldownLabel" type="Label" parent="Background/CooldownIcon"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -11.0
offset_top = 2.0
offset_right = 29.0
offset_bottom = 15.0
text = "5s"
label_settings = ExtResource("3_s17lv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActivationsLabel" type="Label" parent="Background"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -5.0
offset_top = 78.0
offset_right = 35.0
offset_bottom = 91.0
scale = Vector2(0.5, 0.5)
text = "x2"
label_settings = ExtResource("3_s17lv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TriggerIcon" type="TextureRect" parent="Background"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 28.0
offset_top = 91.0
offset_right = 37.0
offset_bottom = 100.0
texture = ExtResource("6_68b68")

[node name="PerkNameLabel" type="Label" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 0
offset_left = -38.0
offset_top = 9.0
offset_right = 112.0
offset_bottom = 22.0
pivot_offset = Vector2(75, 0)
theme_override_font_sizes/font_size = 16
text = "Matchstick"
label_settings = ExtResource("6_c8h7q")
horizontal_alignment = 1

[node name="PerkDescriptionLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.5
offset_top = 27.000002
offset_right = 146.5
offset_bottom = 160.0
grow_horizontal = 2
scale = Vector2(0.33, 0.33)
mouse_filter = 1
theme_override_colors/default_color = Color(0.796243, 0.796243, 0.796243, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_separation = -1
theme_override_styles/normal = SubResource("StyleBoxFlat_m4o3a")
text = "(Active Trigger On Hit): Stores 1 charge for every 100px traveled since last activation. Charges gained are doubled while on the ground. On hit, release all charges to gain a buff giving (charges)% more damage dealt, attack speed, and movement speed for (charges / 10) seconds.  "
fit_content = true
scroll_active = false
script = ExtResource("9_2rl1r")

[node name="RarityTypeDescriptor" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 22.000002
offset_right = 183.75757
offset_bottom = 37.151512
scale = Vector2(0.33, 0.33)
mouse_filter = 1
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2784314)
bbcode_enabled = true
text = "[color=green]RARE[/color] [color=gray]ACTIVE TRIGGER[/color] PERK"
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
script = ExtResource("8_hotfk")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
